--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+/*
+*--- Color Guide ---*
+
+teal -- #00b8b8
+dark teal -- #027d7d
+hot pink -- #de3d83
+yellow -- #e4bd0b
+purple -- #9d4eb6
+green -- #5da87b
+gray -- #a5a5a5
+*/
+
+
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /**
@@ -458,4 +471,267 @@ template {
 
 [hidden] {
   display: none;
+}
+/*
+*--- Typography ---*
+*/
+
+body,
+button,
+input,
+select,
+textarea {
+    color: #0b0b0b;
+    font-family: Raleway, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-size: 1em;
+    line-height: 1.5em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5
+{
+    text-transform: uppercase;
+    color: #00b8b8;
+}
+
+h4,
+h5
+{
+    color: #a5a5a5;
+}
+
+h1 {
+    font-weight: 600;
+    font-size: 2.75em;
+    line-height: 1.0909090909090908em;
+    margin-top: 0.8181818181818181em;
+    margin-bottom: 0.27272727272727em;
+}
+h2 {
+    font-weight: 600;
+    font-size: 1.9375em;
+    line-height: 1.5483870967741935em;
+    margin-top: 0.7741935484870968em;
+    margin-bottom: 0.774193548383870968em;
+}
+h3 {
+    font-weight: 600;
+    font-size: 1.375em;
+    line-height: 1.090909090909090908em;
+    margin-top: 1.090909090909090908em;
+    margin-bottom: 0em;
+}
+h4 {
+    font-weight: 600;
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-top: 1.5em;
+    margin-bottom: 0em;
+}
+h5 {
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-top: 1.5em;
+    margin-bottom: 0em;
+
+}
+h6 {
+    color: #a5a5a5;
+    font-weight: 300;
+    font-size: 0.8em;
+    line-height: 1.5em;
+    margin-top: 0.8em;
+    margin-bottom: 0;
+}
+p,
+ul,
+ol,
+pre,
+table,
+blockquote {
+    margin-top: 0em;
+    margin-bottom: 1.5em;
+}
+ul ul,
+ol ol,
+ul ol,
+ol ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+hr {
+    border: 1px solid;
+    margin: -1px 0;
+}
+b, 
+strong,
+em,
+small,
+code {
+    line-height: 1;
+}
+
+/*
+*--- Global Style ---*
+*/
+
+.main-content-width-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2em;
+}
+p {
+    max-width: 650px;
+}
+a {
+    color: #de3e83;
+}
+a:visited {
+    color: #9d4eb6;
+}
+a:hover {
+    color: #e4db0b;
+}
+a:active {
+    color: #00b8b8;
+}
+.button {
+    text-transform: uppercase;
+    border: none;
+    background: #e4bd0b;
+    padding: .5em 3em;
+    transition: .5s all;
+}
+.button:hover {
+    background: #de3d83;
+}
+.button a {
+    color: #fff;
+    text-decoration: none;
+}
+
+/*
+*--- Header Styles ---*
+*/
+
+.header {
+    background-color: #fff;
+    padding: 2em;
+}
+
+.logo {
+    width: 200px;
+    margin-left: 2em;
+}
+.main-navigation {
+    float: right;
+    margin-top: 1em;
+}
+
+.main-navigation li {
+    list-style-type: none;
+    float: left;
+    margin-right: 1.5em;
+}
+.main-navigation a {
+    color: #a5a5a5;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    display: block;
+    padding: 0 1em;
+    transition: .5s all;
+}
+.main-navigation a:hover {
+    color: #00b8b8;
+}
+
+/*
+*--- Footer Styles ---*
+*/
+.footer {
+    padding: 1em 0 3em 0;
+    background: #e0e5db;
+    clear: both;
+}
+.foot-navigation {
+    max-width: 58.2%;
+    margin: 0 auto;
+}
+.footer-navigation li {
+    list-style-type: none;
+    float: left;
+    margin-right: 1.5em;
+}
+.copyright {
+    max-width: 960px;
+    margin: 4em auto;
+    clear: left;
+    text-align: center;
+}
+
+/*
+*--- Sidebar ---*
+*/
+
+.sidebar {
+    background: #5da87b;
+    float: right;
+    width: 30%;
+    padding: 1em;
+    color: #fff;
+}
+.sidebar .sidebar-heading, .sidebar .sidebar-heading {
+    color: #fff;
+}
+/*
+*--- Two Column Template Right Sidebar ---*
+*/
+.two-column-template-wrapper {
+    float: left;
+    width: 55%;
+    margin-right: 1em;
+}
+
+/*
+*---Front-Page/HomeTemplate---*
+*/
+.home h1, .home h2, .home h3 {
+    color: #fff;
+}
+.home-hero-section {
+    background: url(images/blue_boat.jpeg) no-repeat;
+    background-size: cover;
+    min-height: 550px;
+}
+.hero-content {
+    background: rgba(47, 47, 47, 0.47);
+    background: rgba(228, 189, 11, 0.25);
+    float: right;
+    width: 35%;
+    padding: 0 3em;
+    margin-top: 4em;
+}
+.hero-content h1 {
+    color: #fff;
+    text-align: right;
+}
+.hero-content p {
+    color: #fff;
+    font-size: 1.375em;
+    font-weight: 1.5;
+    margin-top: 1.0909090909090908em;
+    text-align: right;
+}
+.button-home {
+    display: block;
+    width: 300px;
+    padding: 1em 0;
+    
 }
